--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,13 +10,20 @@
       "id": 2,
       "link":"https://eevanr.github.io/fizzbuzz_js_Eevan/",
       "name": "FizzBuzz",
-      "image": "https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
+      "image": "https://i.imgur.com/JMzyY00.png",
       "description": "A simple application utilizing a function to return an output. Written in javaScript, unit and feature tests with e2e training wheel testing package."
     },
     {
       "id": 3,
       "link":"https://eevanr.github.io/address_book/",
       "name": "Address Book",
+      "image": "https://i.imgur.com/LFbZHbj.png",
+      "description": "Browser based address book to store contacts. Written in javaScript, feature tests Cucumber."
+    },
+    {
+      "id": 4,
+      "link":"",
+      "name": "Unavailable",
       "image": "https://images.unsplash.com/photo-1534237886190-ced735ca4b73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
       "description": "Browser based address book to store contacts. Written in javaScript, feature tests Cucumber."
     }
