new state renders with transition

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -26,6 +26,13 @@
       "name": "Unavailable",
       "image": "https://images.unsplash.com/photo-1534237886190-ced735ca4b73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
       "description": "Browser based address book to store contacts. Written in javaScript, feature tests Cucumber."
+    },
+    {
+      "id": 4,
+      "link":"",
+      "name": "Unavailable",
+      "image": "https://images.unsplash.com/photo-1534237886190-ced735ca4b73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
+      "description": "Browser based address book to store contacts. Written in javaScript, feature tests Cucumber."
     }
   ]
 
