--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
     "react-undraw-illustrations": "^2.0.3"
   },
   "devDependencies": {
