--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -22,6 +22,13 @@
     },
     {
       "id": 4,
+      "link":"https://eredonrockpaperscissors.netlify.com",
+      "name": "Rock Paper Scissors in React",
+      "image": "https://imgur.com/IDqaASg",
+      "description": "Using React to build a simple game of Rock Paper Scissors vs a randomly generated computer choice."
+    },
+    {
+      "id": 5,
       "link":"",
       "name": "Unavailable",
       "image": "https://i.imgur.com/HEKYRRV.png",
