--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -17,7 +17,7 @@
       "id": 3,
       "link":"https://eevanr.github.io/address_book/",
       "name": "Address Book",
-      "image": "https://i.imgur.com/rZAfc7p.png",
+      "image": "https://i.imgur.com/2vosk54.png",
       "description": "Browser based address book to store contacts. Written in javaScript, feature tests Cucumber."
     },
     {
@@ -36,6 +36,13 @@
     },
     {
       "id": 6,
+      "link":"https://ca-rails-aut-eevan.herokuapp.com/",
+      "name": "Rails Article Application",
+      "image": "https://i.imgur.com/XV98QDq.png",
+      "description": "Web applitcation where users can use to create accounts and share articles. Authentication with Devise, feature and unit test with Cucumber and Rspec."
+    },
+    {
+      "id": 7,
       "link":"",
       "name": "Unavailable",
       "image": "https://i.imgur.com/HEKYRRV.png",
