add new project card

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -43,6 +43,13 @@
     },
     {
       "id": 7,
+      "link":"https://cooper-client-eevan.netlify.com/",
+      "name": "Cooper Run App",
+      "image": "https://i.imgur.com/Tr9e9uH.png",
+      "description": ""
+    },
+    {
+      "id": 8,
       "link":"",
       "name": "Unavailable",
       "image": "https://i.imgur.com/HEKYRRV.png",
