--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-parallax": "^3.0.3",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.16",
     "react-transition-group": "^4.3.0",
