--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "buildTime": "2 weeks",
+    "buildTime": "current",
     "link": "https://tripwiz.netlify.com/",
     "gitHub": "https://github.com/EevanR/tripwiz_client",
     "gitHubAPI": "https://github.com/EevanR/tripwiz_API",
